# framework

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
doc/framework/manager/: defender.md
public/: app.py  colosso-cloud.2024-11-23.private-key.pem  index.html  index.xml  pyproject.toml
src/application/: pyproject.toml
src/application/action/: builder.py  chat.py  click.py  click.test.py  close.py  create.py  cronjob.xml  delete.py  dropdown.py  editor.py  form.py  gather.py  ide.py  iframe.py  input.py  load.py  login.py  logout.py  model.py  move.py  note.py  offcanvas.py  preview.py  registration.py  save.py  swap.py  tab.py  table.py  terminal.py  update.py
src/application/config/: pyproject.toml
src/application/enum/: application.py  city.py  persistence.py  regions.py
src/application/knowledge/: grammar.py
src/application/locales/: en.json  it.json
src/application/model/: file.py  ide.py  inventory.py  messenger.py  note.py  repository.py  server.py  service.py  storekeeper.py  table.py  transaction.py  user.py  volume.py
src/application/policy/: administrator.xml  api.rule.xml  application.py  application.rule.xml  application.xml  dizionario.txt  password.py  retailer.xml  unknown.rule.xml  user.rule.xml  user.xml
src/application/port/: defender.py  messenger.py  presenter.py  storekeeper.py
src/application/repository/: base.py  client.py  contract.py  file.py  invoice.py  repository.py  router.py  user.py
src/application/route/: api.xml  app.xml
src/application/view/: view.md
src/application/view/component/: Breadcrumb.xml  Chat.test.py  Chat.xml  Column.xml  Container.xml  Editor.xml  Footer.xml  IDE.xml  Iscum.xml  Note.css  Note.xml  Preview.xml  Row.xml  Scrum.xml  SideBar.xml  Table copy.xml  Table.xml  Toast.xml  Tre.xml  Tree.xml  Tru.xml  block.xml  button.xml  column.xml  container.xml  editor.xml  image.xml  input.xml  row.xml  text.xml  window.xml
src/application/view/content/form/: login.xml  logout.xml
src/application/view/content/tab/: assistant.xml
src/application/view/content/table/: container.xml  domain.xml  repository.xml  service.xml  vm.xml  volume.xml
src/application/view/content/wizard/: registration.xml  repository.xml
src/application/view/layout/: app.xml  appley.xml  base.html  base.xml  cardinal.xml  index.html  main.xml  sidebar.xml  stack.xml  test.html  wasm.html
src/application/view/page/academy/: overview.xml
src/application/view/page/auth/: login.html  login.xml
src/application/view/page/colosso/: test.xml
src/application/view/page/company/: invoices.xml  overview.xml
src/application/view/page/cubute/: overview.xml
src/application/view/page/inventory/: container.xml  containers.xml  domain.xml  domains.xml  explore.xml  overview.xml  policies.xml  policy.xml  repositories.xml  repository.xml  secrets.xml  service.xml  services.xml  virtual-machine.xml  virtual-machines.xml  volume.xml  volumes.xml
src/application/view/page/orakom/: clients.xml  contracts.xml  dashboard.xml
src/application/view/page/project/: overview.xml
src/application/view/property/: container.xml
src/framework/manager/: defender.py  executor.py  messenger.py  presenter.py  storekeeper.py  tester.py
src/framework/port/: actuator.py  persistence.py  presentation.py
src/framework/repository/: client.py  file.py  repository.py  transaction.py  user.py
src/framework/service/: factory.py  factory.test.py  flow.py  language.py  loader.py  run.py
src/infrastructure/actuator/: ansible.py  flow.py  task.py
src/infrastructure/authentication/: api.py  database.py  ldap.py  oauth.py  store.py  supabase.py
src/infrastructure/message/: api.py  console.py  email.py  logging.py  redis.py  websocket.py
src/infrastructure/persistence/: api.py  fs.py  jwt.py  jwt.test.py  redis.py  sql.py  supabase.py  wasm.py  web.py
src/infrastructure/presentation/: flutter.py  starlette copy.py  starlette.py  wasm.py  wasm.test.py
