[build-system]
requires = [
    "flit_core >=3.2,<4",
]

build-backend = "flit_core.buildapi"

[project]
name = "hub"
identifier ="eu.colosso.hub"
key = "{{ key }}"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "kink",
    "flet",
    "redis",
    "aiofiles",
    "aiohttp",
    "toml",
    "jinja2",
    "sqlalchemy",
    "starlette",
]


[persistence.infrastructure]
adapter = "wasm"
url = "http://localhost:8000/infrastructure/"

[apersistence.database]
adapter = "mariadb"
host = "0.0.0.0"
username = "mario423434"
password = "B6Ckb9FX1rVqoLZA"


[presentation.app]
adapter = "wasm"
host = "0.0.0.0"
port = "8000"
view = "src/domain/view/layout/page.xml"
routes = "src/application/route/app.xml"

[presentation.sito]
adapter = "starlette"
host = "0.0.0.0"
port = "8001"
view = "src/domain/view/layout/page.xml"
routes = "src/application/route/api.xml"