[project]
name = "hub"
identifier ="it.orakom.hub"
key = "t0RZQLdUDpweGc7hvcDhMcoKuOaJBo+jgsjJ6huk2rQRLrpfPyFl/A=="
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "kink",
    "flet",
    "redis",
    "aiofiles",
    "aiohttp",
    "toml",
    "jinja2",
    "sqlalchemy",
    "starlette",
]

[presentation.app]
adapter = "wasm"
host = "0.0.0.0"
port = "8000"
view = "src/domain/view/layout/page.xml"
routes = "src/application/route/app.xml"

[presentation.sito]
adapter = "starlette"
host = "0.0.0.0"
port = "8001"
view = "src/domain/view/layout/page.xml"
routes = "src/application/route/api.xml"


[apersistence.cache]
adapter = "redis"
host = "127.0.0.1"
port = "6379"
expiry = "86400"

[amessage.notice]
adapter = "logging"
host = "127.0.0.1"
port = "2525"
persistence = "local"

