[project]
name = "hub"
identifier ="cloud.colosso.app"
key = "{{ SECRET_KEY }}"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[presentation.app]
adapter = "wasm"
host = "0.0.0.0"
port = "8000"
view = "src/domain/view/layout/page.xml"
routes = "src/application/route/app.xml"

[apresentation.api]
adapter = "starlette"
host = "0.0.0.0"
port = "8001"
view = "src/domain/view/layout/page.xml"
routes = "src/application/route/api.xml"

[message.log]
adapter = "logging"
host = "127.0.0.1"
port = "2525"
persistence = "local"

[message.ui]
adapter = "websocket"
url = "ws://localhost:8000/messenger"

[aauthentication.github]
adapter = "api"
host = "127.0.0.1"
port = "2525"
id = "{{ GITHUB_APP_ID }}"
secret = "{{ GITHUB_APP_SECRET }}"

[authentication.github]
adapter = "api"
url_login = "https://github.com/login/oauth/authorize?client_id=Ov23lidpWleO0KCHQVm0&scope=repo,user&state=xyz987"
id = "{{ GITHUB_OAUTH_ID }}"
secret = "{{ GITHUB_OAUTH_SECRET }}"

[apersistence.bot]
adapter = "jwt"
url = "https://api.github.com"
app_id = "{{ GITHUB_COLOSSO_ID }}"
installation_id = "{{ GITHUB_COLOSSO_APP }}"
key = "public/colosso-cloud.2024-11-24.private-key.pem"
autologin = "true"

[persistence.github]
adapter = "api"
url = "https://api.github.com"
authorization = "token "
accept = "application/vnd.github+json"
token = "{{ GITHUB_APP_IPE }}"
autologin = "false"
expiry = "86400"

[persistence.repository]
adapter = "api"
url = "https://api.github.com"
authorization = "Bearer "
accept = "application/vnd.github+json"
token = "{{ session_token or 'none' }}"

[persistence.workspace]
adapter = "fs"