[project]
name = "hub"
identifier ="it.orakom.hub"
key = "t0RZQLdUDpweGc7hvcDhMcoKuOaJBo+jgsjJ6huk2rQRLrpfPyFl/A=="
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "kink",
    "flet",
    "redis",
    "aiofiles",
    "aiohttp",
    "toml",
    "jinja2",
    "sqlalchemy",
    "starlette",
]

[presentation.app]
adapter = "wasm"
host = "127.0.0.1"
port = "8000"
routes = "/home/salvatore-addivinola/Documenti/accent/src/application/route/api.xml"

[apersistence.sap]
adapter = "api"
url = "https://5.158.64.250:50000/b1s/v1"
auth = "Login"
name = "SBO_ORAKOM99"
username = "manager"
password = "Orakom2024"

[persistence.erp]
adapter = "sql"
host = "5.158.64.76"
port = "3306"
name = "orakom_erp_v2_production"
username = "ngorakolo"
password = "CCX9vHLruvxcS9Gs"


[apersistence.cache]
adapter = "redis"
host = "127.0.0.1"
port = "6379"
expiry = "86400"

[message.notice]
adapter = "logging"
host = "127.0.0.1"
port = "2525"
persistence = "local"

